# fatecat

./: .auto-github.json  .dockerignore  .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONSTITUTION.md  DEBUG.md  LICENSE  Makefile  README.md  REVIEW.md  SKILL.md  compose.yaml  mkdocs.yml  pyproject.toml  requirements-dev.lock.txt  requirements-dev.txt  requirements.lock.txt  requirements.txt
.github/: AGENTS.md
.github/workflows/: acceptance.yml  container.yml  hf-space-deploy.yml
ai/: AGENTS.md
apps/: AGENTS.md
catalog/: AGENTS.md
catalog/components/: fate-core.yaml  fatecat-delivery.yaml
contracts/: AGENTS.md
contracts/fate/: AGENTS.md  classics_rule_index.json  evidence_schema.json  future_features.json  rule_depth_registry.json  weight_policy.json
contracts/fate/capabilities/: AGENTS.md
contracts/fate/profiles/: pure_analysis.json
docs/: AGENTS.md
docs/deployment/: huggingface-space.md
docs/reference-materials/: AGENTS.md  README.md
docs/reference-materials/architecture/: 当前目录结构.md  系统架构图.md
docs/reference-materials/lifecycle/: AGENTS.md  README.md
docs/reference-materials/operations/: Agent 一键部署.md  OI文档.md  Telegram Bot 启动与重启指南.md
docs/reference-materials/prompts/: ascii可视化-prompt.md  prompt-system-bazi-kline.md  复查-prompt.md  完整性检查-prompt.md  胶水开发要求-prompt.md  问题描述-prompt.md
docs/reference-materials/reference/: 八字紫微能力基线与缺口矩阵.md  八字紫微规则深度扩展.md  功能清单.md  功能状态.md  核心功能完整性审查.md  独立预测体系接入路线.md  统一预测能力协议.md  综合八字陈述服务加固.md
docs/reference-materials/roadmap/: TODO_PERFORMANCE.md  八字紫微标杆对标路线图.md  功能补齐计划.md
docs/reference-materials/生产故障/: externalization_plan_2025-12-17.md  production_incident_2025-12-17_strong_weak.md  telegram Markdown 代码块格式修复记录 2025-12-15.md
docs/reference-materials/经验/: 真太阳时修正经验.md
domains/: AGENTS.md
domains/experience-delivery/: AGENTS.md
domains/fate-analysis/: AGENTS.md
governance/: CHANGELOG.md  INDEX.md  README.md
governance/ai-governance/: README.md
governance/architecture-gates/: GATE-INDEX.md  门禁与护栏.md
governance/archive/: README.md
governance/context/: AGENT-ENTRY.md  CONTEXT-MAP.md  CONTEXT-ROUTER.md  PROJECT-TOPOLOGY.md
governance/control-plane/: README.md
governance/data-governance/: README.md
governance/migration/: INDEX.md  compatibility-ledger.md  fatecat-enterprise-assessment.md  fatecat-enterprise-directory-mapping.md
governance/ownership/: README.md
governance/processes/: QA计划标准.md  RPI研究计划实施流程.md  代理协作协议.md  本地工具与验证入口.md
governance/risk-register/: INDEX.md
governance/runtime/: README.md
governance/standards/: Python项目结构规范.md  劣质代码定义.md  工程质量标准.md  零美化语义界面标准.md  非功能性需求标准.md
governance/tasks/: AGENTS.md  INDEX.md  README.md  lessons.md
governance/templates/: ADR.template.md  AGENT-FEEDBACK.template.md  GATE.template.md  QA.template.md
governance/tools/: README.md  governance_context_bundle.py  governance_health_report.py  init_governance_package.py  new_governance_record.py  new_module_context.py  rebuild_governance_index.py  validate_governance_package.py
infra/: AGENTS.md
infra/databases/: AGENTS.md
infra/docker/: AGENTS.md  Dockerfile.delivery  entrypoint.delivery.sh
infra/environments/: AGENTS.md
infra/huggingface-space/: .hfignore  AGENTS.md  Dockerfile  README.md
infra/runtime/: AGENTS.md
platform/: AGENTS.md
project/: .gitignore  AGENTS.md  README.md  pyproject.toml
project/assets/: AGENTS.md
project/assets/config/: .env.example  agent.env.example
project/assets/data/: AGENTS.md  README.md
project/assets/data/calendar/solar_terms/: README.md  source_manifest.tsv
project/assets/data/classics/: README.md  source_manifest.tsv
project/assets/deploy/: pack.sh
project/assets/docs/: AGENTS.md  OI文档.md  README.md  功能清单.md  功能状态.md  系统架构图.md
project/assets/docs/architecture/: 序列图.md  系统架构图.md
project/assets/docs/operations/: OI文档.md
project/assets/docs/prompts/: prompt-user-bazi-kline.md  完整性检查-prompt.md
project/assets/docs/reference/: 功能状态.md  核心功能完整性审查.md
project/assets/fate/: future_features.json
project/assets/fate/profiles/: pure_analysis.json
project/modules/fate_core/src/fate_core/providers/: AGENTS.md  classical.py
project/modules/telegram/: AGENTS.md
project/modules/telegram/src/: bazi_calculator.py  bot.py  location.py  main.py  models.py  prediction_systems.py  report_generator.py  web_ui.py
project/modules/telegram/src/prompts/: 完整版.md
project/modules/telegram/tests/: test_all_features.py  test_calculator.py  test_xingming.py
project/tests/: conftest.py  test_api_contracts.py  test_branding_support.py  test_web_html.py
project/tests/fate_core/: test_field_registry.py  test_pure_analysis_usecase.py
references/: architecture.md  commands.md  execution-playbook.md  index.md  io-contract.md  lifecycle.md  live-bot-verification.md  migration-plan.md  ops-pack.md  troubleshooting.md
scripts/: AGENTS.md  acceptance.sh  bootstrap.sh  check-export-hygiene.sh  check-privacy-fixtures.sh  check-public-release-policy.sh  check-source-hygiene.sh  check-structure.sh  clean-runtime.sh  collect-ops-bundle.sh  common.sh  container-build.sh  container-release.sh  container-smoke.sh  delivery-smoke.sh  export-runtime.sh  generate-mingli-predictions.sh  hf-space-deploy.sh  init-lifecycle-pack.sh  live-bot-smoke.sh  local-ci.sh  production-readiness.sh  public-release-gate.sh  run-mingli-bench.sh  vendor-health.sh
scripts/project/: README.md
shared/: AGENTS.md
tests/: AGENTS.md
tests/regression/: __init__.py  conftest.py  test_api_contracts.py  test_bazi_golden_coverage_matrix.py  test_bazi_statement_golden.py  test_bazi_ziwei_benchmark_hardening.py  test_bazi_ziwei_rule_depth.py  test_branding_support.py  test_calendar_oracle_contract.py  test_capability_protocol.py  test_catalog_contracts.py  test_fate_core_cli.py  test_fate_policy_assets.py  test_mingli_bench_gate.py  test_operability_docs.py  test_solar_terms_golden.py  test_strength_mapping.py  test_web_html.py
tools/: AGENTS.md
tools/reference-repos/: AGENTS.md  README.md  vendor_sources.json
(+739 files in other folders)
