[project]
name = "fatecat"
version = "0.1.0"
description = "FateCat enterprise system repository for Chinese fate analysis and delivery"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "TradeCat Labs" }]
keywords = ["fatecat", "bazi", "ziwei", "chinese-calendar", "enterprise-architecture"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.12",
]

dependencies = [
  "python-telegram-bot>=20.0",
  "python-dotenv>=1.0.0",
  "httpx[socks]>=0.25.0",
  "aiohttp>=3.9.0",
  "pandas>=2.0.0",
  "numpy>=1.24.0",
  "fastapi>=0.104.0",
  "uvicorn>=0.24.0",
  "pydantic>=2.0.0",
  "china-region>=0.0.11",
  "addressparser>=0.2.4",
  "sxtwl>=1.4.10",
  "colorama>=0.4.6",
  "bidict>=0.23.1",
  "divicast>=0.1.1",
  "tabulate>=0.9.0",
]

[project.scripts]
fatecat = "fate_core.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=4.1.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.4.0",
  "black>=24.0.0",
  "mypy>=1.10.0",
  "build>=1.2.0",
  "hatchling>=1.25.0",
  "editables>=0.5",
  "pre-commit>=3.7.0",
  "ipython>=8.0.0",
]
docs = [
  "mkdocs>=1.6.0",
  "mkdocs-material>=9.5.0",
]

[build-system]
requires = ["hatchling", "editables"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["domains/fate-analysis/services/fate-core/src/fate_core"]

[tool.ruff]
target-version = "py312"
line-length = 120
src = [
  "domains/fate-analysis/services/fate-core/src",
  "domains/experience-delivery/services/fatecat-delivery/src",
  "tests/regression",
]
extend-exclude = [
  "domains/*/services/*/output",
  "domains/*/services/*/runtime",
  "infra/runtime/local-state",
  "tools/reference-repos",
]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "B008"]

[tool.ruff.lint.isort]
known-first-party = ["fate_core"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = [
  "domains/fate-analysis/services/fate-core/tests",
  "domains/experience-delivery/services/fatecat-delivery/tests",
  "tests/regression",
]
python_files = ["test_*.py"]
python_functions = ["test_*"]
pythonpath = [
  "domains/fate-analysis/services/fate-core/src",
  "domains/experience-delivery/services/fatecat-delivery/src",
]
addopts = ["-v", "--tb=short", "--import-mode=importlib"]
markers = [
  "slow: marks tests as slow",
  "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = [
  "domains/fate-analysis/services/fate-core/src/fate_core",
  "domains/experience-delivery/services/fatecat-delivery/src",
]
branch = true
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.mypy]
python_version = "3.12"
mypy_path = [
  "domains/fate-analysis/services/fate-core/src",
  "domains/experience-delivery/services/fatecat-delivery/src",
]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["bazi_calculator"]
follow_imports = "skip"
ignore_missing_imports = true
