[project]
name = "fatecat"
version = "0.1.0"
description = "FateCat 命理分析与交付模块"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "TradeCat Team" }]
keywords = ["fatecat", "bazi", "astrology", "chinese-calendar"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "python-telegram-bot>=20.0",
    "python-dotenv>=1.0.0",
    "httpx[socks]>=0.25.0",
    "aiohttp>=3.9.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "china-region>=0.0.11",
    "addressparser>=0.2.4",
    "sxtwl>=1.4.10",
    "colorama>=0.4.6",
    "bidict>=0.23.1",
    "divicast>=0.1.1",
    "tabulate>=0.9.0",
]

[project.scripts]
fatecat = "fate_core.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "ipython>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["modules/fate_core/src/fate_core"]

# ==================== Ruff ====================
[tool.ruff]
target-version = "py312"
line-length = 120
src = ["modules", "tests"]
extend-exclude = [
    "assets/vendor",
    "modules/telegram/output",
    "runtime",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument
]

[tool.ruff.lint.isort]
known-first-party = ["modules"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ==================== Pytest ====================
[tool.pytest.ini_options]
testpaths = ["tests", "modules/telegram/tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = ["-v", "--tb=short"]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
]

# ==================== Coverage ====================
[tool.coverage.run]
source = ["modules"]
branch = true
omit = ["tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

# ==================== MyPy ====================
[tool.mypy]
python_version = "3.12"
mypy_path = ["modules/fate_core/src", "modules/telegram/src"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["bazi_calculator"]
follow_imports = "skip"
ignore_missing_imports = true
